# reconbot-indoor-mapping

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  tests.yml
configs/: hallway_room_001.json  metric_scale_example.json
docs/: architecture.md  capture_protocol.md  engineering_decisions.md  evaluation_plan.md  hallway_room_001_dense_baseline.md  hallway_room_001_results.md  hallway_room_002_capture_plan.md  interview_guide.md  roadmap.md  system_architecture.md
notebooks/: ReconBot_Dense_T4.ipynb
src/reconbot/: __init__.py  cli.py  colmap.py  dense_qa.py  keyframes.py  manifest.py  rematch.py  scale.py  stitch.py  trajectory.py  video.py
src/reconmap/: __init__.py  cli.py  planning.py  trajectory.py
tests/: test_colmap.py  test_dense_qa.py  test_manifest.py  test_planning.py  test_rematch.py  test_scale.py  test_trajectory.py  test_video.py
