[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reconbot-indoor-mapping"
version = "0.1.0"
description = "Portable monocular hallway and room mapping with trajectory quality gates."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
vision = [
    "opencv-contrib-python>=4.8",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
reconmap = "reconmap.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
